--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,310 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+body{
+    background-color: black;
+    color: white;
+    overflow: hidden;
+}
+.left{
+    width: 22vw;
+    padding:10px ;
+}
+.right{
+    width: 77vw;
+    padding-top: 16px;
+    position: relative;
+}
+.home ul li{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    width: 35px;
+    font-size: 25px;
+    list-style: none;
+    padding-top: 25px;
+}
+.library{
+    min-height: 65vh;
+    position: relative;
+}
+.heading{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    width: 100%;
+}
+.heading img{
+    width: 35px;
+}
+.footer{
+    display: flex;
+    font-size: 10px;
+    gap: 5px;
+    position: absolute;
+    bottom: 0;
+}
+.footer a{
+    color: grey;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+.songlist{
+    height: 533px;
+    overflow: auto;
+    margin-bottom: 44px ;
+}
+.songlist ul{
+    padding: 0 10px;
+}
+.songlist ul li{
+    width: 290px;
+    overflow:none  ;
+    list-style-type: decimal;
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+    cursor: pointer;
+    padding: 12px 0;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 12px;
+    margin: 13px 0;
+}
+.songlist .info{
+    font-size: 13px;
+    width: 344px;
+}
+.playnow{
+    display: flex;
+    width: 60px;
+   
+}
+
+.nav{
+    display: flex;
+    width: 25px;
+    gap: 25px;
+}
+.hamburger{
+    display: none;
+}
+.close{
+    display: none;
+}
+.spotify-playlist{
+    background-color: rgb(30, 30, 30);
+    padding: 16px;
+}
+.up{
+    display: flex;
+    justify-content: space-between;
+}
+.up h1:hover{
+    text-decoration: underline;
+    transition: all 0.3s;
+}
+.up h3:hover{
+    text-decoration: underline;
+    transition: all 0.3s;
+}
+.card-container{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(5,1fr);
+    gap: 45px;
+    max-height: 70vh;
+    overflow-y: auto;
+    
+}
+.card{
+    position: relative;
+    width: 250px;
+    padding-top: 20px;
+}
+
+.card > *{
+    padding-top: 10px;
+}
+.card img{
+    border-radius: 150px;
+    width: 100%;
+    object-fit: contain;
+}
+.play{
+    opacity: 0;
+    top: 285px;
+    width: 73px;
+    position: absolute;
+    right: 10px;
+}
+.card:hover .play{
+    opacity: 1;
+    transition: all 1s ease-out ;
+    top: 185px;
+}
+.buttons >*{
+    margin: 0 12px;
+}
+.signup{
+    color: rgb(176, 176, 176);
+    border: none;
+    font-size: 21px;
+    font-weight: bold;
+    outline: none;
+    padding: 0;
+    cursor: pointer;
+    
+}
+.signup:hover{
+    color: white;
+   font-size: 23px;
+}
+.login{
+    font-size:21px ;
+    font-weight: bold;
+    border-radius: 21px;
+    width: 95px ;
+    height: 45px;
+    border: none;
+    outline: none;
+    padding:none;
+    cursor: pointer;
+}
+.login:hover{
+    width: 97px;
+    height: 47px;
+    padding: 0 14px;
+    font-size: 23px;
+}
+.playbar{
+    filter: invert(1);
+    position: fixed;
+    bottom: 30px;
+    background : #dad5d5;
+    width: 92%;
+    padding: 12px;
+    width: 73vw;
+    border-radius: 15px;
+    min-height: 40px;
+}
+.songbuttons{
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+.songbuttons img{
+    cursor: pointer;
+}
+.seekbar
+{
+    width: 98%;
+    height: 6px;
+    background: black;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.circle{
+    width: 13px;
+    height: 13px;
+    background: black;
+    border: 2px solid black;
+    border-radius: 25px;
+    position: absolute;
+    top: -6px;
+    left: 0%;
+    transition: left 0.5s;
+}
+.abovebar{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+.timevolume{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.volume img{
+    padding-bottom: 8px;
+}
+.volume{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.songtime{
+    width: 125px;
+}
+.range input{
+    cursor: pointer;
+}
+@media (max-width: 1000px) {
+    .left{
+        position: absolute;
+        left: -120%;
+        transition: all 0.5s;
+        z-index: 1;
+        width: 390px;
+        background-color: black;
+        padding: 0;
+    }
+    .close{
+        display: block;
+        position: absolute;
+        right: 20px;
+    }
+    .right{
+        width: 100vw;
+        margin: 0;
+    }
+    .info div{
+        word-break: break-all;
+    }
+    .songinfo , .songtime{
+        width: auto;
+    }
+    .playbar{
+        width: calc(100vw - 60px);
+    }
+    .seekbar{
+        width: calc(100vw - 70px);
+    }
+    .hamburger{
+        display: block;
+    }
+    .logo img{
+        width: 150px;
+    }
+    .card-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        margin: 0;
+    }
+    .card{
+        width: 80vw;
+    }
+    .abovebar{
+        flex-direction: column;
+        gap: 23px;
+        align-items: center;
+    }
+}
+.copyright{
+    width: 77vw;
+    height: 20vh;
+}
